--- a/index.html
+++ b/index.html
@@ -70,147 +70,147 @@
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-7xl mx-auto">
       <!-- Fence Staining -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/G7msFDI.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/cmGlGdE.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/haaOE0V.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/TaaDzCZ.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/SkrhZSP.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-category="all fence">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
         <img src="https://i.imgur.com/YpTUAW4.jpg" alt="Fence staining after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining After</figcaption>
       </figure>
 
       <!-- Kitchen Cabinet Refinishing -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/VZuX0PW.jpg" alt="Kitchen cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/1VpiGUR.jpg" alt="Kitchen cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/29VI4Ld.jpg" alt="Kitchen cabinet prep" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing Prep</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/urvdwqg.jpg" alt="Kitchen cabinet in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all kitchen">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
         <img src="https://i.imgur.com/oIB94gh.jpg" alt="Kitchen cabinet after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Kitchen Cabinet Refinishing After</figcaption>
       </figure>
 
       <!-- Bathroom Cabinet Refinishing -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all bathroom">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all bathroom">
         <img src="https://i.imgur.com/y4deTDh.jpg" alt="Bathroom cabinet before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all bathroom">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all bathroom">
         <img src="https://i.imgur.com/1rg4fiA.jpg" alt="Bathroom cabinet after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing After</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all bathroom">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all bathroom">
         <img src="https://i.imgur.com/vX95qgY.jpg" alt="Bathroom cabinet detail" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Bathroom Cabinet Refinishing Detail</figcaption>
       </figure>
 
       <!-- Office Cabinets -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all office">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all office">
         <img src="https://i.imgur.com/5uxz6MG.jpg" alt="Office cabinets after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Office Cabinets After</figcaption>
       </figure>
 
       <!-- Exterior House Re-Paint -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all exterior">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
         <img src="https://i.imgur.com/caDyyEb.jpg" alt="House re-paint before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all exterior">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
         <img src="https://i.imgur.com/dorc9gW.jpg" alt="House re-paint in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all exterior">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
         <img src="https://i.imgur.com/GXblKnj.jpg" alt="House re-paint side view" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Side View</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all exterior">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
         <img src="https://i.imgur.com/GlHOs9K.jpg" alt="House re-paint after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint After</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all exterior">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all exterior">
         <img src="https://i.imgur.com/yONWXQi.jpg" alt="House re-paint detail" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Exterior House Re-Paint Detail</figcaption>
       </figure>
 
       <!-- Pool Deck & Lanai Coatings -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all pool">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
         <img src="https://i.imgur.com/PnIQ4Cb.jpg" alt="Pool deck before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all pool">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
         <img src="https://i.imgur.com/ZA035HT.jpg" alt="Pool deck in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all pool">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
         <img src="https://i.imgur.com/MWJJWNA.jpg" alt="Pool deck after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating After</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all pool">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
         <img src="https://i.imgur.com/gsM4qwf.jpg" alt="Lanai coating before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all pool">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all pool">
         <img src="https://i.imgur.com/vzFFVUB.jpg" alt="Lanai coating after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Pool Deck & Lanai Coating After</figcaption>
       </figure>
 
       <!-- Garage Floor Epoxy Coatings -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all garage">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
         <img src="https://i.imgur.com/TknwIgw.jpg" alt="Garage floor before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all garage">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
         <img src="https://i.imgur.com/GOyK7o5.jpg" alt="Garage floor prep" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Prep</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all garage">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
         <img src="https://i.imgur.com/usdiyBZ.jpg" alt="Garage floor in progress" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating In Progress</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all garage">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
         <img src="https://i.imgur.com/bqH5Ssa.jpg" alt="Garage floor after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating After</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all garage">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
         <img src="https://i.imgur.com/l5bwEOd.jpg" alt="Garage floor detail" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Detail</figcaption>
       </figure>
 
       <!-- Faux Wood Grain (Finished) -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all faux">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all faux">
         <img src="https://i.imgur.com/ehdfitb.jpg" alt="Faux wood doors after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Grain Doors After</figcaption>
       </figure>
 
       <!-- Custom Trim & Built-Ins -->
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-category="all trim">
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all trim">
         <img src="https://i.imgur.com/T5iTfZG.jpg" alt="Custom trim before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Custom Trim & Built-Ins Before</figcaption>
       </figure>
@@ -224,7 +224,7 @@
       event.target.classList.add('active');
       document.querySelectorAll('.tab-content').forEach(content => {
         content.classList.remove('active');
-        if (category === 'all' || content.dataset.category.includes(category)) {
+        if (category === 'all' || content.dataset.tab.includes(category)) {
           content.classList.add('active');
         }
       });
