--- a/index.html
+++ b/index.html
@@ -74,7 +74,26 @@
         <img src="https://i.imgur.com/G7msFDI.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
       </figure>
-      <!-- (remaining fence photos) -->
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
+        <img src="https://i.imgur.com/cmGlGdE.jpg" alt="Fence staining before" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining Before</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
+        <img src="https://i.imgur.com/haaOE0V.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
+        <img src="https://i.imgur.com/TaaDzCZ.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
+        <img src="https://i.imgur.com/SkrhZSP.jpg" alt="Fence staining in progress" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining In Progress</figcaption>
+      </figure>
+      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content active" data-tab="all fence">
+        <img src="https://i.imgur.com/YpTUAW4.jpg" alt="Fence staining after" class="w-full h-64 object-cover gallery-img">
+        <figcaption class="p-4 text-gray-700 bg-white">Fence Staining After</figcaption>
+      </figure>
 
       <!-- Kitchen Cabinet Refinishing -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all kitchen">
@@ -110,41 +129,26 @@
       </figure>
       <!-- (remaining pool photos) -->
 
-      <!-- Garage Floor Epoxy Coatings (only concrete floor photos) -->
+      <!-- Garage Floor Epoxy Coatings -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
         <img src="https://i.imgur.com/TknwIgw.jpg" alt="Garage floor before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
-        <img src="https://i.imgur.com/GOyK7o5.jpg" alt="Garage floor prep" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Prep</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
-        <img src="https://i.imgur.com/bqH5Ssa.jpg" alt="Garage floor after" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating After</figcaption>
-      </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all garage">
-        <img src="https://i.imgur.com/l5bwEOd.jpg" alt="Garage floor detail" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Garage Floor Epoxy Coating Detail</figcaption>
-      </figure>
+      <!-- (remaining garage photos) -->
 
       <!-- Faux Wood Grain (Finished) -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all faux">
         <img src="https://i.imgur.com/ehdfitb.jpg" alt="Faux wood doors after" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Faux Wood Grain Doors After</figcaption>
       </figure>
-      <!-- (all other finished faux wood photos) -->
+      <!-- (all finished faux wood photos) -->
 
-      <!-- Custom Trim & Built-Ins (including white primer, yellow base coat, and moved faux wood doors) -->
+      <!-- Custom Trim & Built-Ins -->
       <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all trim">
         <img src="https://i.imgur.com/T5iTfZG.jpg" alt="Custom trim before" class="w-full h-64 object-cover gallery-img">
         <figcaption class="p-4 text-gray-700 bg-white">Custom Trim & Built-Ins Before</figcaption>
       </figure>
-      <figure class="rounded-2xl shadow-2xl overflow-hidden tab-content" data-tab="all trim">
-        <img src="https://i.imgur.com/93QpnjE.jpg" alt="Custom trim in progress (yellow base coat)" class="w-full h-64 object-cover gallery-img">
-        <figcaption class="p-4 text-gray-700 bg-white">Custom Trim & Built-Ins In Progress (Yellow Base Coat)</figcaption>
-      </figure>
-      <!-- (all other custom trim photos) -->
+      <!-- (remaining custom trim photos) -->
     </div>
   </section>
 
@@ -175,4 +179,13 @@
     <p class="mt-12 text-lg">Jensen Beach • Stuart • Port St. Lucie • Hobe Sound • Palm City<br>Licensed & Insured • 5-Year Workmanship Warranty</p>
   </section>
 
-  <a href="tel:8636622529
+  <a href="tel:8636622529" class="fixed-cta bg-orange-500 text-white p-6 rounded-full shadow-2xl hover:bg-orange-600 text-lg font-bold">
+    Call Now
+  </a>
+
+  <footer class="bg-black text-white py-12 text-center">
+    <img src="https://i.imgur.com/vnB21TO.png" alt="uHate2Paint LLC" class="h-12 mx-auto mb-4">
+    <p>© 2025 uHate2Paint LLC • uhate2paintllc@gmail.com • 863-662-2529</p>
+  </footer>
+</body>
+</html>
